[package]
name = "bookThing"
version = "1.0.0"
edition = "2021"

[features]
gl = []
turbojpeg = ["dep:turbojpeg"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
chrono = "0.4.42"
dirs-next = "2.0.0"
gphoto2 = "3.4"
serde = "1.0.228"
serde_json = "1.0.145"
eframe = { version = "0.33.0", default-features = true }
image  = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
zip    = { version = "0.6",  default-features = false }
mimalloc = { version = "0.1.48", optional = true }
tikv-jemallocator = { version = "0.6.1", optional = true }
turbojpeg = { version = "1", optional = true }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
